alle projektseiten fertig

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div id="fullscreenMenu" class="hidden">
   <nav>
     <ul id="projektListe">
-      <li><a href="projekte/info.html">Über die Exkursion</a></li>
+      <li><a href="#" data-file="projekte/info.html">Über die Exkursion</a></li>  
       <li><a href="#" data-file="projekte/briefe.html">Briefe an Maurice</a></li>    
       <li><a href="#" data-file="projekte/egor.html">Egor</a></li>
       <li><a href="#" data-file="projekte/HumanNature.html">HUMAN NATURE – the nature of being human</a></li>
@@ -40,7 +40,6 @@
       <div  class="combo-zone" onclick="openContent('briefe.html')"></div>
     </div>
 
-    <!-- direkt in index.html oder deiner Hauptseite -->
   <div id="lightbox" class="lightbox hidden">
       <span class="lightbox-close">&times;</span>
       <img class="lightbox-img" src="" alt="" />
