--- a/projekte/IchUndWir.html
+++ b/projekte/IchUndWir.html
@@ -9,4 +9,38 @@
         <h1>Zwischen ich und wir</h1>
         <p class="autor">von Sakura Hinrichsen</p>
 
+        <div class="video-container">
+          <video controls autoplay muted>
+          <source src="/images/projekte/IchUndWir/zwischenraum.mp4" type="video/mp4">
+          Dein Browser unterstützt das Video-Tag nicht.
+          </video>
+
+        <p>Die Projektidee entstand aus den Erlebnissen der Bretagne-Exkursion, 
+          auf der ich das abstrakte Konzept der Zwischenräume auf eine sehr persönliche Weise 
+          verstehen und sichtbar machen konnte. Während der Reise erkannte ich, wie diese 
+          Zwischenräume nicht nur in der Natur – in der Weite der Küstenlandschaften oder in den engen
+           Gassen der Städte – existierten, sondern auch in der zwischenmenschlichen Kommunikation und
+          im Austausch mit meinen Kommilitonen.</p>
+
+        <p>Die Umgebung der Bretagne spiegelte diese Zwischenräume auf besondere Weise wider. Sie zeigten 
+          sich in den Kontrasten zwischen Fremdsein und Freundschaft, Alleinsein und Gemeinschaft. Besonders
+           spürbar wurde dies in den Verbindungen, die zwischen uns entstanden: Menschen, die sich zunächst als
+            Fremde begegneten, begannen, sich zu verstehen und Freundschaften zu knüpfen.</p>
+
+        <p>Die Reise eröffnete uns einen Raum, um uns miteinander zu verbinden – einen Zwischenraum der Kommunikation, der
+           uns näherbrachte. In den Momenten des Alleinseins und bei den Spaziergängen durch die Natur entstand gleichzeitig
+            ein Raum der Reflexion und Selbstfindung, der es mir ermöglichte, auch die Beziehung zu mir selbst zu hinterfragen.</p>
+
+        <div class="plakate">
+        <img src="../images/projekte/IchUndWir/zwischen ich und wir-page-001.jpg"  class="clickable intro-img">
+        </div>
+
+        <p>Diese Erfahrungen wollte ich durch ein Gedicht und Videoschnipsel festhalten, um das Zusammenspiel zwischen äußeren und
+           inneren Räumen zu verdeutlichen. Die Zwischenräume begreife ich dabei als Brücke – als etwas, das sowohl trennt als auch verbindet.</p>
+
+        <p>Das Projekt war für mich eine reflektierende Reise. Es half mir nicht nur, die Bretagne in ihrer Schönheit zu erleben, sondern regte
+           auch dazu an, über meine eigenen zwischenmenschlichen Beziehungen nachzudenken. Es ist ein Erinnerungsstück an eine Reise, die für mich – und
+            für die Gruppe – eine bleibende Bedeutung hat: als Zeugnis unserer gemeinsamen Zeit und der Freundschaften, die in den Zwischenräumen 
+            zwischen uns gewachsen sind.</p>
+        <p>.</p>
 </main>
