--- a/projekte/UebergaengeInMusik.html
+++ b/projekte/UebergaengeInMusik.html
@@ -9,4 +9,38 @@
         <h1>Übergänge in der Musik: Eine Reise von alt zu neu – traditionell zu modern</h1>
         <p class="autor"> von Nils Weinandy</p>
 
+        <div class="video-container">
+          <video controls autoplay muted>
+          <source src="/images/projekte/übergänge_musik/musikvideo.mp4" type="video/mp4">
+          Dein Browser unterstützt das Video-Tag nicht.
+          </video>
+
+          <p>Ich wollte ausprobieren, wie sich ein Song Schritt für Schritt von einem klassischen 
+            Klangbild zu knalligem Hardstyle entwickeln kann. Deshalb beginne ich ganz simpel mit 
+            einer einzigen, langen Note. Nach und nach werden die Abstände zwischen den Tönen
+             kürzer, während das Tempo langsam von 120 auf 130 BPM ansteigt.</p>
+
+          <p>Dann kommen Klavier, Bass und eine hohe Melodie dazu. Die hohe Note bewegt
+             sich wie eine kleine Treppe langsam abwärts. Es folgen Gitarren, Streicher im Staccato
+              und kräftige Akkorde, die dem Ganzen mehr Drive verleihen. Ein Drumset und eine funkige
+               Bassgitarre bringen zusätzlich Leben in den Track.</p>
+
+          <p>Im weiteren Verlauf nehme ich die echten Instrumente Stück für Stück wieder heraus und
+             ersetze sie komplett durch Synthesizer. Das leitet direkt über in einen fetten Hardstyle-Part
+              mit typischen Leads und druckvollen Kickdrums.</p>
+
+          <p>Zum Schluss fahre ich das Tempo allmählich auf 80 BPM herunter und bringe die
+             Anfangsinstrumente zurück. So schließt sich der Kreis. Auf diese Weise will ich zeigen, wie
+              klassische und moderne Sounds in einem Track zusammenwachsen können, mal mit sanften, mal mit 
+              deutlich spürbaren Übergängen.</p>
+
+          <p>Eine Erklärung zum Song:</p>
+
+          <div class="video-container">
+          <video controls muted>
+          <source src="/images/projekte/übergänge_musik/Erklärung.mp4" type="video/mp4">
+          Dein Browser unterstützt das Video-Tag nicht.
+          </video>
+
+          <p>.</p>
 </main>
