--- a/projekte/stayhere.html
+++ b/projekte/stayhere.html
@@ -32,6 +32,8 @@
     <p>Zur Dokumentation des kreativen Prozesses entstand außerdem ein „Behind the Song“-Video, das die einzelnen Produktionsschritte
        zeigt, sowie ein Musikvideo, bestehend aus Aufnahmen, die während der Exkursion entstanden sind.</p>
 
+   <p>Behind the Song:</p>
+   
        <div class="video-container">
           <video controls muted>
           <source src="/images/projekte/stayhere/bts.mp4" type="video/mp4">
