--- a/projekte/zwischentoene.html
+++ b/projekte/zwischentoene.html
@@ -9,4 +9,63 @@
         <h1>ZWISCHENTÖNE</h1>
         <p class="autor">von Amelie Schepping</p>
 
+        <div>
+        <audio controls autoplay>
+          <source src="/images/projekte/zwischentöne/ZWISCHENTÖNE.m4a" type="audio/mp4">
+          Dein Browser unterstützt kein Audioelement.
+        </audio>
+      </div>
+
+
+        <p>Das Hörstück „ZWISCHENTÖNE“ entstand im Rahmen der zehntägigen interdisziplinären Exkursion 
+          in die Bretagne zum Thema „Zwischenräume und Übergänge“. Während der Reise habe ich mit meinen Mitreisenden 
+          Gespräche geführt und aufgenommen. Ich wollte wissen: Welche Übergänge nehmt ihr wahr? Wo entdeckt ihr Zwischenräume? Und was hat euch inspiriert?
+           Auszüge aus diesen Interviews bilden die Grundlage des Hörstücks.</p>
+
+        <p>Um die Atmosphäre der Bretagne hörbar und erlebbar zu machen, habe ich unterwegs zahlreiche Klangaufnahmen gesammelt – vom Meeresrauschen über
+           Marktgeräusche bis hin zu Schritten und Stimmen. Dabei habe ich versucht, die Klänge gezielt thematisch mit den Inhalten der Gespräche zu verbinden.
+            Wenn beispielsweise jemand über den Tod als Übergang spricht, ist im Hintergrund ein Dudelsack zu hören – eine Aufnahme, die zufällig auf einem Friedhof 
+            während einer bretonischen Beerdigung entstand.</p>
+
+        <div class="image-row">
+            <img src="/images/projekte/zwischentöne/Fotos/Foto1.JPG" class="clickable">
+            <img src="/images/projekte/zwischentöne/Fotos/Foto3.jpg" class="clickable">
+          </div>
+
+        <p>Ergänzt wird das akustische Material durch kleine Klavierpassagen, die ich selbst eingespielt habe, um eine nostalgische Grundstimmung zu erzeugen. Außerdem 
+          habe ich die Klänge einer kleinen Klangschale aufgenommen, die ich in der Bretagne gekauft habe.</p>
+
+        <p>„ZWISCHENTÖNE“ verbindet Natur, Gespräche und Stimmungen und zeigt, wie sich Zwischenräume nicht nur in Landschaften, sondern auch zwischen Menschen und Gedanken entfalten.</p>
+        
+        <p>Das Skript:</p>
+        <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="/images/projekte/zwischentöne/skript/1.jpg" class="clickable" >
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/zwischentöne/skript/2.jpg" class="clickable"  >
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/zwischentöne/skript/3.jpg" class="clickable" >
+          </div>
+
+          <div class="swiper-slide">
+            <img src="/images/projekte/zwischentöne/skript/4.jpg" class="clickable" >
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/zwischentöne/skript/5.jpg" class="clickable" >
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/zwischentöne/skript/6.jpg" class="clickable" >
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/zwischentöne/skript/7.jpg" class="clickable" >
+          </div>
+        </div>
+
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+      </div>
+        <p>.</p>
 </main>
