kreise auf den projektseiten geändert

--- a/projekte/HumanNature.html
+++ b/projekte/HumanNature.html
@@ -1,8 +1,13 @@
 <div class="kreis-duo">
-  <span class="tier-name left">hummer</span>
-  <img class="kreis-img" src="images/meerestiere/hummer.png" alt="hummer">
-  <img class="kreis-img overlap" src="images/meerestiere/schlangenseestern.png" alt="seestern">
-  <span class="tier-name right">schlangenseestern</span>
+  <div class="tier-kombi">
+    <img class="kreis-img" src="images/meerestiere/hummer.png" alt="alge">
+    <span class="tier-name below">hummer</span>
+  </div>
+
+  <div class="tier-kombi">
+    <span class="tier-name above">schlangen<br>seestern</span>
+    <img class="kreis-img overlap" src="images/meerestiere/schlangenseestern.png" alt="napfschnecke">
+  </div>
 </div>
 
 <main class="page-content">
