--- a/projekte/briefe.html
+++ b/projekte/briefe.html
@@ -1,9 +1,24 @@
+<!--
 <div class="kreis-duo">
   <span class="tier-name left">Alge</span>
   <img class="kreis-img" src="images/meerestiere/alge.png" alt="Alge">
   <img class="kreis-img overlap" src="images/meerestiere/napfschnecke.png" alt="Napfschnecke">
   <span class="tier-name right">Napfschnecke</span>
 </div>
+-->
+<div class="kreis-duo">
+  <div class="tier-kombi">
+    <img class="kreis-img" src="images/meerestiere/alge.png" alt="alge">
+    <span class="tier-name below">ALGE</span>
+  </div>
+
+  <div class="tier-kombi">
+    <span class="tier-name above">NAPFSCHNECKE</span>
+    <img class="kreis-img overlap" src="images/meerestiere/napfschnecke.png" alt="napfschnecke">
+  </div>
+</div>
+
+
 
 
       <main class="page-content">
