--- a/projekte/entre-sentieure.html
+++ b/projekte/entre-sentieure.html
@@ -1,9 +1,13 @@
-
 <div class="kreis-duo">
-  <span class="tier-name left">kompassqualle</span>
-  <img class="kreis-img" src="images/meerestiere/kompassqualle.png" alt="qualle">
-  <img class="kreis-img overlap" src="images/meerestiere/rochen.png" alt="rochen">
-  <span class="tier-name right">rochen</span>
+  <div class="tier-kombi">
+    <img class="kreis-img" src="images/meerestiere/kompassqualle.png" alt="alge">
+    <span class="tier-name below">kompassqualle</span>
+  </div>
+
+  <div class="tier-kombi">
+    <span class="tier-name above">rochen</span>
+    <img class="kreis-img overlap" src="images/meerestiere/rochen.png" alt="napfschnecke">
+  </div>
 </div>
 
 <main class="page-content">
