--- a/projekte/menhirküre.html
+++ b/projekte/menhirküre.html
@@ -1,8 +1,13 @@
 <div class="kreis-duo">
-  <span class="tier-name left">hummer</span>
-  <img class="kreis-img" src="images/meerestiere/hummer.png" alt="hummer">
-  <img class="kreis-img overlap" src="images/meerestiere/rochen.png" alt="rochen">
-  <span class="tier-name right">rochen</span>
+  <div class="tier-kombi">
+    <img class="kreis-img" src="images/meerestiere/hummer.png" alt="alge">
+    <span class="tier-name below">hummer</span>
+  </div>
+
+  <div class="tier-kombi">
+    <span class="tier-name above">rochen</span>
+    <img class="kreis-img overlap" src="images/meerestiere/rochen.png" alt="napfschnecke">
+  </div>
 </div>
 
 <main class="page-content projekt-menhirkure">
