--- a/projekte/IchUndWir.html
+++ b/projekte/IchUndWir.html
@@ -1,8 +1,13 @@
 <div class="kreis-duo">
-  <span class="tier-name left">oktopus</span>
-  <img class="kreis-img" src="images/meerestiere/oktopus.png" alt="oktopus">
-  <img class="kreis-img overlap" src="images/meerestiere/seeanemone.png" alt="seeanemone">
-  <span class="tier-name right">seeanemone</span>
+  <div class="tier-kombi">
+    <img class="kreis-img" src="images/meerestiere/oktopus.png" alt="alge">
+    <span class="tier-name below">oktopus</span>
+  </div>
+
+  <div class="tier-kombi">
+    <span class="tier-name above">seeanemone</span>
+    <img class="kreis-img overlap" src="images/meerestiere/seeanemone.png" alt="napfschnecke">
+  </div>
 </div>
 
 <main class="page-content">
