--- a/projekte/TheInBetween.html
+++ b/projekte/TheInBetween.html
@@ -1,8 +1,13 @@
 <div class="kreis-duo">
-  <span class="tier-name left">seeanemone</span>
-  <img class="kreis-img" src="images/meerestiere/seeanemone.png" alt="seeanemone">
-  <img class="kreis-img overlap" src="images/meerestiere/kompassqualle.png" alt="kompassqualle">
-  <span class="tier-name right">kompassqualle</span>
+  <div class="tier-kombi">
+    <img class="kreis-img" src="images/meerestiere/seeanemone.png" alt="alge">
+    <span class="tier-name below">seeanemone</span>
+  </div>
+
+  <div class="tier-kombi">
+    <span class="tier-name above">kompassqualle</span>
+    <img class="kreis-img overlap" src="images/meerestiere/kompassqualle.png" alt="napfschnecke">
+  </div>
 </div>
 
 <main class="page-content">
