--- a/projekte/UebergaengeInMusik.html
+++ b/projekte/UebergaengeInMusik.html
@@ -1,8 +1,13 @@
 <div class="kreis-duo">
-  <span class="tier-name left">auster</span>
-  <img class="kreis-img" src="images/meerestiere/auster.png" alt="auster">
-  <img class="kreis-img overlap" src="images/meerestiere/napfschnecke.png" alt="Napfschnecke">
-  <span class="tier-name right">Napfschnecke</span>
+  <div class="tier-kombi">
+    <img class="kreis-img" src="images/meerestiere/auster.png" alt="alge">
+    <span class="tier-name below">auster</span>
+  </div>
+
+  <div class="tier-kombi">
+    <span class="tier-name above">napfschnecke</span>
+    <img class="kreis-img overlap" src="images/meerestiere/napfschnecke.png" alt="napfschnecke">
+  </div>
 </div>
 
 <main class="page-content">
