--- a/projekte/egor.html
+++ b/projekte/egor.html
@@ -1,8 +1,13 @@
 <div class="kreis-duo">
-  <span class="tier-name left">felsgarnele</span>
-  <img class="kreis-img" src="images/meerestiere/felsgarnele.png" alt="garnele">
-  <img class="kreis-img overlap" src="images/meerestiere/seepocken.png" alt="pocken">
-  <span class="tier-name right">seepocken</span>
+  <div class="tier-kombi">
+    <img class="kreis-img" src="images/meerestiere/felsgarnele.png" alt="alge">
+    <span class="tier-name below">felsgarnele</span>
+  </div>
+
+  <div class="tier-kombi">
+    <span class="tier-name above">seepocken</span>
+    <img class="kreis-img overlap" src="images/meerestiere/seepocken.png" alt="napfschnecke">
+  </div>
 </div>
 
  <main class="page-content">
