--- a/projekte/stayhere.html
+++ b/projekte/stayhere.html
@@ -1,8 +1,13 @@
 <div class="kreis-duo">
-  <span class="tier-name left">felsgarnele</span>
-  <img class="kreis-img" src="images/meerestiere/felsgarnele.png" alt="felsgarnele">
-  <img class="kreis-img overlap" src="images/meerestiere/oktopus.png" alt="oktopus">
-  <span class="tier-name right">oktopus</span>
+  <div class="tier-kombi">
+    <img class="kreis-img" src="images/meerestiere/felsgarnele.png" alt="alge">
+    <span class="tier-name below">felsgarnele</span>
+  </div>
+
+  <div class="tier-kombi">
+    <span class="tier-name above">oktopus</span>
+    <img class="kreis-img overlap" src="images/meerestiere/oktopus.png" alt="napfschnecke">
+  </div>
 </div>
 
 <main class="page-content">
