--- a/projekte/tiefblau.html
+++ b/projekte/tiefblau.html
@@ -1,8 +1,13 @@
 <div class="kreis-duo">
-  <span class="tier-name left">schlangenseestern</span>
-  <img class="kreis-img" src="images/meerestiere/schlangenseestern.png" alt="schlangenseestern">
-  <img class="kreis-img overlap" src="images/meerestiere/seepocken.png" alt="seepocken">
-  <span class="tier-name right">seepocken</span>
+  <div class="tier-kombi">
+    <img class="kreis-img" src="images/meerestiere/schlangenseestern.png" alt="alge">
+    <span class="tier-name below">schlangen<br>seestern</span>
+  </div>
+
+  <div class="tier-kombi">
+    <span class="tier-name above">seepocken</span>
+    <img class="kreis-img overlap" src="images/meerestiere/seepocken.png" alt="napfschnecke">
+  </div>
 </div>
 
 <main class="page-content">
