--- a/projekte/zwischentoene.html
+++ b/projekte/zwischentoene.html
@@ -1,8 +1,13 @@
 <div class="kreis-duo">
-  <span class="tier-name left">fisch</span>
-  <img class="kreis-img" src="images/meerestiere/fisch.png" alt="fisch">
-  <img class="kreis-img overlap" src="images/meerestiere/seeigel.png" alt="seeigel">
-  <span class="tier-name right">seeigel</span>
+  <div class="tier-kombi">
+    <img class="kreis-img" src="images/meerestiere/fisch.png" alt="alge">
+    <span class="tier-name below">fisch</span>
+  </div>
+
+  <div class="tier-kombi">
+    <span class="tier-name above">seeigel</span>
+    <img class="kreis-img overlap" src="images/meerestiere/seeigel.png" alt="napfschnecke">
+  </div>
 </div>
 
 <main class="page-content">
