new background video + new waves animation

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     </ul>
   </nav>
 </div>
-
+    <video autoplay muted loop id="bgVideo">
+      <source src="Comp 1_2.mp4" type="video/mp4">
+    </video>
 
     <div id="navigation">
       <div  class="combo-zone" onclick="openContent('briefe.html')"></div>
