alles mögliche mit neuen grafiken

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
     </video>
 
     <div id="navigation">
-      <div  class="combo-zone" onclick="openContent('briefe.html')"></div>
+      <div  class="combo-zone" onclick="testAnimation()"></div>
+      <video muted class="net-close">
+      <source src="closing.webm" type="video/webm">
+    </video>
     </div>
 
   <div id="lightbox" class="lightbox hidden">
