--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </video>
 
     <div id="navigation">
-      <div  class="combo-zone" onclick="testAnimation()"></div>
+      <div  class="combo-zone"></div>
       <video muted class="net-close">
       <source src="closing.webm" type="video/webm">
     </video>
